--- a/style.css
+++ b/style.css
@@ -8,26 +8,28 @@
 }
 
 #operator-container {
-    justify-self: center;;
+    display: flex;
+    justify-self: center;
     justify-content: space-between;
     border: solid;
     color: green;
     margin: 20px;
     padding: 10px;
     width: 400px;
-    height: 80px;
+    height: 60px;
 }
 
-.operator-button {
+.operator-button, #equal-button {
     aspect-ratio: 1 / 1;
     width: 60px;
+    height: auto;
     font-size: 20px;
 }
 
 #display {
     width: 400px;
     height: 80px;
-    margin: 40px;
+    margin: 20px;
     padding: 10px;
     border: solid;
     color: blue;
@@ -46,13 +48,14 @@
     justify-content: space-between;
     border: solid;
     color:red;
-    width: 400px;
+    width: 300px;
     height: 250px;
     margin: 20px;
 }
 
-.number-button, #equal-button, #ans-button {
+.number-button, #backspace-button {
     aspect-ratio: 1 / 1;
-    width: calc(100% / 4 - 30px);
-    font-size: 20px;
+    width: calc((100% / 3) - 30px);
+    font-size: 30px;
+    margin: 5px;
 }
